<?xml version="1.0"?>
<package>
  <name>cisst_ros_crtk</name>
  <version>2.0.0</version>
  <description>The cisst_ros_crtk package</description>

  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>CISST</license>

  <author email="anton.deguet@jhu.edu">Anton Deguet</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>cisst_msgs</build_depend>
  <build_depend>cisst</build_depend>
  <build_depend>cisst_ros_bridge</build_depend>
  <build_depend>crtk_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>cisst_msgs</run_depend>
  <run_depend>cisst</run_depend>
  <run_depend>crtk_msgs</run_depend>
  <run_depend>cisst_ros_bridge</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
